--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "docker compose -f docker/base.compose.yml -f docker/dev.compose.yml up --attach migrate --attach app",
-    "e2e": "docker compose -f docker/base.compose.yml -f docker/e2e.compose.yml up --attach app",
+    "e2e": "docker compose -f docker/base.compose.yml -f docker/e2e.compose.yml up --attach app --build",
     "test:unit": "jest --config testing/jest-configs/jest.unit.config.ts",
     "test:integration": "jest --config testing/jest-configs/jest.integration.config.ts",
     "test:components": "jest --config testing/jest-configs/jest.components.config.ts",
